1.商品頁修改 2.header span 修改

--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
                                 <i class="fas fa-bell"></i>
                                 <!-- 通知紅點 -->
                                 <span class="notice_dot">
-                                    <span class="notice_dotNumber"></span>
+                                    <span class="notice_dotNumber">99</span>
                                 </span>
                             </div>
                         </div>
