--- a/productSingle.html
+++ b/productSingle.html
@@ -82,7 +82,7 @@
                                 <i class="fas fa-bell"></i>
                                 <!-- 通知紅點 -->
                                 <span class="notice_dot">
-                                    <span class="notice_dotNumber"></span>
+                                    <span class="notice_dotNumber">99</span>
                                 </span>
                             </div>
                         </div>
@@ -100,9 +100,9 @@
     <section class="SingleProductHead">
         <div class="productBread size marginAuto">
             <p>
-                <span class="small lightColor">logo</span>
-                <span class="small lightColor">>雕塑類</span>
-                <span class="small epBColor">>芹芹的大師之作</span>
+                <span><a href=""  class="small lightColor">logo</a></span>
+                <span><a href=""  class="lightColor">>雕塑類</a></span>
+                <span><a href=""  class="epBColor">>芹芹的大師之作</a></span>
             </p>
         </div>
     </section>
