--- a/html/listing.html
+++ b/html/listing.html
@@ -28,76 +28,7 @@
 	</script>
 </head>
 <body>
-    <script src="https://kit.fontawesome.com/1a00250e22.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="js/header.js"></script>
-    <header>
-        <section class="headerNormalContain">
-            <section class="logoContain">
-                <div class="logo">
-                        <a href="">
-                            <img src="assets/image/all_logo.png">
-                        </a>
-                </div>
-            </section>
-            <div class="hamburger"></div>
-            <nav class="mainMenu fullscreen">
-                <ul>
-                    <li style="--animation-order: 1;">
-                        <input id="navMenu" type="checkbox">
-                        <label for="navMenu" class="deepColor">
-                            <a href="galleryDoor.html"></a>
-                                <span>藝廊</span>
-                                <i class="fa-solid fa-angle-down"></i>
-                            </a>
-                        </label>
-                        <ul>
-                            <li><a href="" class="lightColor">展示區</a></li>
-                            <li><a href="" class="lightColor">雕塑類</a></li>
-                            <li><a href="" class="lightColor">畫作類</a></li>
-                            <li><a href="" class="lightColor">公仔類</a></li>
-                            <li><a href="" class="lightColor">品牌合作</a></li>
-                        </ul>
-                    </li>
-                    <li style="--animation-order: 2;" >
-                        <a href="prouductAll.html" class="deepColor">拍賣廳</a>
-                    </li>
-                    <li style="--animation-order: 3;">
-                        <a href="articleAll.html" class="deepColor">藝論</a>
-                    </li>
-                    <li style="--animation-order: 4;">
-                        <a href="about.html" class="deepColor">關於我們</a>
-                    </li>
-                    <li style="--animation-order: 5;">
-                        <a href="3dSurroundView.html" class="deepColor">會員中心</a>
-                    </li>
-                    <li style="--animation-order: 6;">
-                        <section class="memberList">
-                            <div class="icon">
-                                    <a href="">
-                                        <img src="assets/image/home_header_iconBell.png">
-                                    </a>
-                            </div>
-                            <div class="icon">
-                                    <a href="">
-                                        <img src="assets/image/home_header_iconMember.png">
-                                    </a>
-                            </div>
-                        </section>
-                    </li>
-                    <li style="--animation-order: 7;">
-                        <div class="login">
-                            <a href="login.html" class="whiteRound">登入</a>
-                            <a href="listing.html" class="round">上架</a>
-                        </div>
-                    </li>
-                </ul>
-                <div class="close">
-                    <div></div>
-                </div>
-            </nav>
-        </section>
-    </header>
+    @@include('layout/headerNormal.html')
 
     <!-- 拍賣流程步驟 -->
     <section id="listingVue">
@@ -563,61 +494,7 @@
         });
     </script>
 
-    <script src="https://kit.fontawesome.com/1a00250e22.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <footer>
-        <section class="footerContain">
-            <div class="logoContain">
-                    <div class="logo">
-                        <img src="assets/image/all_logo.png">
-                    </div>
-            </div>
-            <div class="socialContain">
-                    <div class="logo">
-                        <a href="">
-                            <img src="assets/image/home_footer_facebook.png">
-                        </a>
-                    </div>
-                    <div class="logo">
-                        <a href="">
-                            <img src="assets/image/home_footer_instagram.png">
-                        </a>
-                    </div>
-                    <div class="logo">
-                        <a href="">
-                            <img src="assets/image/home_footer_twitter.png">
-                        </a>
-                    </div>
-                    <div class="logo">
-                        <a href="">
-                            <img src="assets/image/home_footer_line.png">
-                        </a>
-                    </div>
-            </div>
-            <nav>
-                    <ul>
-                        <li>
-                            <a href="">藝廊</a>
-                        </li>
-                        <li>
-                            <a href="">拍賣廳</a>
-                        </li>
-                        <li>
-                            <a href="">藝論</a>
-                        </li>
-                        <li>
-                            <a href="">關於我們</a>
-                        </li>
-                        <li>
-                            <a href="">會員中心</a>
-                        </li>
-                    </ul>
-            </nav>
-            <div class="copyright">
-                    <p>@2022 Powered by 藝論 Right Reserved<br>本網站為緯育Tibame前端設計工程師班專題作業，本平台僅供學習、展示之用。</p>
-            </div>
-        </section>
-    </footer>
+    @@include('layout/footer.html')
 
         <!-- 燈箱js -->
         <script>
