--- a/listing.html
+++ b/listing.html
@@ -28,28 +28,30 @@
 	</script>
 </head>
 <body>
-    <script src="https://kit.fontawesome.com/1a00250e22.js" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/1a00250e22.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/header.js"></script>
     <header>
         <section class="headerNormalContain">
             <section class="logoContain">
                 <div class="logo">
-                        <a href="">
+                        <a href="homePage.html">
                             <img src="assets/image/all_logo.png">
                         </a>
                 </div>
             </section>
             <div class="hamburger"></div>
             <nav class="mainMenu fullscreen">
-                <ul>
+                <ul>    
                     <li style="--animation-order: 1;">
                         <input id="navMenu" type="checkbox">
                         <label for="navMenu" class="deepColor">
-                            <a href="galleryDoor.html"></a>
-                                <span>藝廊</span>
-                                <i class="fa-solid fa-angle-down"></i>
+                            <a href="galleryDoor.html" class="deepColor">
+                                藝廊
                             </a>
+                            <b>
+                                ▼
+                            </b>   
                         </label>
                         <ul>
                             <li><a href="" class="lightColor">展示區</a></li>
@@ -71,7 +73,7 @@
                     <li style="--animation-order: 5;">
                         <a href="3dSurroundView.html" class="deepColor">會員中心</a>
                     </li>
-                    <li style="--animation-order: 6;">
+                    <!-- <li style="--animation-order: 6;">
                         <section class="memberList">
                             <div class="icon">
                                     <a href="">
@@ -79,16 +81,23 @@
                                     </a>
                             </div>
                             <div class="icon">
-                                    <a href="">
+                                    <a href="3dSurroundView.html">
                                         <img src="assets/image/home_header_iconMember.png">
                                     </a>
                             </div>
                         </section>
-                    </li>
-                    <li style="--animation-order: 7;">
+                    </li> -->
+                    <li style="--animation-order: 6;">
                         <div class="login">
                             <a href="login.html" class="whiteRound">登入</a>
                             <a href="listing.html" class="round">上架</a>
+                            <div class="notice header">
+                                <i class="fas fa-bell"></i>
+                                <!-- 通知紅點 -->
+                                <span class="notice_dot">
+                                    <span class="notice_dotNumber"></span>
+                                </span>
+                            </div>
                         </div>
                     </li>
                 </ul>
@@ -98,6 +107,7 @@
             </nav>
         </section>
     </header>
+
 
     <!-- 拍賣流程步驟 -->
     <section id="listingVue">
@@ -563,7 +573,8 @@
         });
     </script>
 
-    <script src="https://kit.fontawesome.com/1a00250e22.js" crossorigin="anonymous"></script>
+   
+        <script src="https://kit.fontawesome.com/1a00250e22.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <footer>
         <section class="footerContain">
@@ -597,27 +608,30 @@
             <nav>
                     <ul>
                         <li>
-                            <a href="">藝廊</a>
+                            <a href="galleryDoor.html">藝廊</a>
                         </li>
                         <li>
-                            <a href="">拍賣廳</a>
+                            <a href="prouductAll.html">拍賣廳</a>
                         </li>
                         <li>
-                            <a href="">藝論</a>
+                            <a href="articleAll.html">藝論</a>
                         </li>
                         <li>
-                            <a href="">關於我們</a>
+                            <a href="about.html">關於我們</a>
                         </li>
                         <li>
-                            <a href="">會員中心</a>
+                            <a href="3dSurroundView.html">會員中心</a>
                         </li>
                     </ul>
             </nav>
             <div class="copyright">
-                    <p>@2022 Powered by 藝論 Right Reserved<br>本網站為緯育Tibame前端設計工程師班專題作業，本平台僅供學習、展示之用。</p>
+                <p>本網站為緯育TibaMe_前端設計工程師班第104期學員專題成果作品，本平台僅供學習、展示之用。<br>若有抵觸有關著作權，或有第三人主張侵害智慧財產權等情事，均由學員負法律上責任，緯育公司概不負責。<br>若有侵權疑慮，您可以私訊
+                <a href="https://www.facebook.com/TibaMe">緯育TibaMe</a>，後續會由專人協助處理。</p>
+                    
             </div>
         </section>
     </footer>
+
 
         <!-- 燈箱js -->
         <script>
