藝廊加上header 修改連結

--- a/html/galleryDoor.html
+++ b/html/galleryDoor.html
@@ -24,7 +24,7 @@
                 <div class="ring">
                     <!-- 公仔類 -->
                     <div class="door">
-                        <a href="./gellery.html">
+                        <a href="galleryAll\gallery\gallery.html">
                             <div class="wrap">
                                 <div class="pic">
                                     <img src="../assets/image/galleryDoor_door04.gif" alt="gelleryDoorImage">
@@ -37,7 +37,7 @@
                     </div>
                     <!-- 品牌合作 -->
                     <div class="door">
-                        <a href="./gellery.html">
+                        <a href="galleryAll\gallery\gallery.html">
                             <div class="wrap">
                                 <div class="pic">
                                     <img src="../assets/image/galleryDoor_door05.gif" alt="gelleryDoorImage">
@@ -50,7 +50,7 @@
                     </div>
                     <!-- 展示區 -->
                     <div class="door">
-                        <a href="./gellery.html">
+                        <a href="galleryAll\gallery\gallery.html">
                             <div class="wrap">
                                 <div class="pic">
                                     <img src="../assets/image/galleryDoor_door01.gif" alt="gelleryDoorImage">
@@ -63,7 +63,7 @@
                     </div>
                     <!-- 雕塑類 -->
                     <div class="door">
-                        <a href="./gellery.html">
+                        <a href="galleryAll\gallery\gallery.html">
                             <div class="wrap">
                                 <div class="pic">
                                     <img src="../assets/image/galleryDoor_door02.gif" alt="gelleryDoorImage">
@@ -76,7 +76,7 @@
                     </div>
                     <!-- 畫作類 -->
                     <div class="door">
-                        <a href="./gellery.html">
+                        <a href="galleryAll\gallery\gallery.html">
                             <div class="wrap">
                                 <div class="pic">
                                     <img src="../assets/image/galleryDoor_door03.gif" alt="gelleryDoorImage">
