修改單頁商品header類型

--- a/html/productSingle.html
+++ b/html/productSingle.html
@@ -15,7 +15,7 @@
 <body>
 <!-- 商品單頁_頁首區域 -->
 <!-- @@include('layout/header.html') -->
-@@include('layout/header.html',{"headerClass":""})
+@@include('layout/headerNormal.html',{"headerClass":""})
 <!-- 許瑀芹 -->
 <!-- 麵包屑 -->
     <section class="SingleProductHead">
