--- a/html/3dSurroundView.html
+++ b/html/3dSurroundView.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--共用-->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="sass/style.css">
     <!-- <link rel="stylesheet" href="assets/css/uiSet.css">
     <link rel="stylesheet" href="assets/css/component.css">
     <link rel="stylesheet" href="assets/css/buttonStyle.css"> -->
     <script src="https://kit.fontawesome.com/90d222f595.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <!--燈箱-->
     <!-- <link rel="stylesheet" href="assets/css/accountManagement.css">
     <link rel="stylesheet" href="assets/css/collect.css">
@@ -90,24 +91,30 @@
             <span class="close3D"><i class="fas fa-times"></i></span>
         </section>
         <main>
-            <p class="information">會員編號：<span class="small">0123456（pk）</span></p>
-            <p class="information">會員暱稱：<span class="small showChangeValue" name="1">text</span> <input class="changeValue" value="text" nmae="1"></input>
-            </p>
-            <p class="information">會員帳號：<span>milktea</span></p>
-            <p class="information">會員密碼：<span>20190119</span></p>
-            </p>
-            <p class="information">姓名：<span class="small showChangeValue" name="2">text</span><input class="changeValue" value="text" nmae="2"></input>
-            </p>
-            <p class="information">信箱：<span class="small showChangeValue" name="3">text</span><input class="changeValue" value="text" nmae="3"></input>
-            </p>
-            <p class="information">電話：<span class="small showChangeValue" name="4">text</span><input class="changeValue" value="varchar" nmae="4"></input>
-            </p>
-            <p class="information">地址：<span class="small showChangeValue" name="5">text</span><input class="changeValue" value="text" nmae="5"></input>
-            </p>
-            <p class="information">信用卡：<span class="small showChangeValue" name="6">text</span><input class="changeValue" value="int" nmae="6"></input>
-            </p>
-            <p class="information">註冊日期：<span>20220224</span>
-            </p>
+            <section>
+                <p class="information">會員編號：<span class="small">0123456（pk）</span></p>
+                <p class="information">會員暱稱：<span class="small showChangeValue" name="1">text</span> <input class="changeValue" value="text" nmae="1"></input>
+                </p>
+                <p class="information">會員帳號：<span>milktea</span></p>
+                <p class="information">會員密碼：<span>20190119</span></p>
+                </p>
+                <p class="information">姓名：<span class="small showChangeValue" name="2">text</span><input class="changeValue" value="text" nmae="2"></input>
+                </p>
+                <p class="information">信箱：<span class="small showChangeValue" name="3">text</span><input class="changeValue" value="text" nmae="3"></input>
+                </p>
+                <p class="information">電話：<span class="small showChangeValue" name="4">text</span><input class="changeValue" value="varchar" nmae="4"></input>
+                </p>
+                <p class="information">地址：<span class="small showChangeValue" name="5">text</span><input class="changeValue" value="text" nmae="5"></input>
+                </p>
+                <p class="information">信用卡：<span class="small showChangeValue" name="6">text</span><input class="changeValue" value="int" nmae="6"></input>
+                </p>
+                <p class="information">註冊日期：<span>20220224</span>
+                </p>
+            </section>
+            <section class="profilePicture">
+                <section class="img characterAdjustment_box"><img class="characterAdjustment" src="https://fakeimg.pl/200/394897/fff" alt="頭像"></section>
+                <section title="此圖示為客製話人物的虛擬意象，請至客製化人物燈箱修改"><i class="fas fa-question"></i></section>
+            </section>
         </main>
     </section>
     <!--燈箱的收藏-->
@@ -124,7 +131,7 @@
             <section class="commodityGroup">
                 <section class="commodity">
                     <section class="graphics">
-                        <section class="love"><i class="fas fa-heart"></i> <span>75</span></section>
+                        <section class="love"><i class="bi bi-heart"></i> <span>75</span></section>
                         <section class="img"><img src="https://fakeimg.pl/300x250/394897/fff" alt="拍攝商品圖"></section>
                         <h4>奶茶弟弟的超級肉肉</h4>
                     </section>
@@ -138,7 +145,7 @@
                 </section>
                 <section class="commodity">
                     <section class="graphics">
-                        <section class="love"><i class="fas fa-heart"></i> <span>75</span></section>
+                        <section class="love"><i class="bi bi-heart"></i> <span>75</span></section>
                         <section class="img"><img src="https://fakeimg.pl/300x250/394897/fff" alt="拍攝商品圖"></section>
                         <h4>珍珠妹妹的無敵雞腿</h4>
                     </section>
@@ -243,16 +250,22 @@
             <section class="main">
                 <section class="sliderCharacters">
                     <section class="avatar">
-                        <section class="img"><img class="characterAdjustment" src="https://fakeimg.pl/200/394897/fff" alt="頭像"></section>
+                        <section class="img characterAdjustment_box"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Christopher001.png" alt="頭像"></section>
+                        <!--
                         <section class="controller"><span class="circle styleRound"></span><span class="circle styleRound"></span><span class="circle styleRound"></span></section>
+                        -->
                     </section>
                     <section class="adjust">
+                        <!--
                         <section>
                             <p>性別：<input class="checkbox" disabled type="checkbox" onclick="return chk(this)" checked></input>男<input class="checkbox" disabled type="checkbox" onclick="return chk(this)"></input>女</p>
                         </section>
+                        -->
                         <section>
+                            <!--
                             <span>人物：</span>
-                            <input class="adjustmentLever" disabled type="range" min="0" max="5">
+                            -->
+                            <input class="adjustmentLever adjustmentLever_hidden" disabled type="range" min="0" max="5" hidden>
                             <!--
                             <span class="adjustmentLever">
                                 <span class="adjustmentLeverContent"></span>
@@ -260,13 +273,17 @@
                             -->
                         </section>
                         <section>
-                            <span>風格：</span>
+                            <span>膚色：</span>
                             <input class="adjustmentLever" disabled type="range" min="0" max="2">
                             <!--
                             <span class="adjustmentLever">
                                 <span class="adjustmentLeverContent"></span>
                             </span>
                             -->
+                        </section>
+                        <section class="controller">
+                            <span>背景色：</span>
+                            <span class="circle styleRound"></span><span class="circle styleRound"></span><span class="circle styleRound"></span>
                         </section>
                         <!--
                         <section>
@@ -281,22 +298,31 @@
                                 <span class="adjustmentLeverContent"></span>
                             </span>
                         </section>
-                    -->
+                        -->
                     </section>
                 </section>
-                <section class="clickPeople mask">
-                    <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Christopher001.png" alt="頭像"></section>
-                    <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Eric001.png" alt="頭像"></section>
-                    <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Liam001.png" alt="頭像"></section>
-                    <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Mark001.png" alt="頭像"></section>
-                    <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Owen001.png" alt="頭像"></section>
-                    <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Simon001.png" alt="頭像"></section>
-                    <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Emma001.png" alt="頭像"></section>
-                    <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Evelyn001.png" alt="頭像"></section>
-                    <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Jane001.png" alt="頭像"></section>
-                    <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Lilly001.png" alt="頭像"></section>
-                    <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Marilyn001.png" alt="頭像"></section>
-                    <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Melissa001.png" alt="頭像"></section>
+                <section class="controlBlock mask">
+                    <div class="switchBetween">
+                        <span class="switchBetween_text text_boy">男</span>
+                        <span class="switchBetween_round"></span>
+                        <span class="switchBetween_text">女</span>
+                    </div>
+                    <section class="clickPeople">
+                        <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Christopher001.png" alt="頭像"></section>
+                        <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Eric001.png" alt="頭像"></section>
+                        <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Liam001.png" alt="頭像"></section>
+                        <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Mark001.png" alt="頭像"></section>
+                        <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Owen001.png" alt="頭像"></section>
+                        <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Simon001.png" alt="頭像"></section>
+                        <!--
+                        <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Emma001.png" alt="頭像"></section>
+                        <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Evelyn001.png" alt="頭像"></section>
+                        <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Jane001.png" alt="頭像"></section>
+                        <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Lilly001.png" alt="頭像"></section>
+                        <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Marilyn001.png" alt="頭像"></section>
+                        <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Melissa001.png" alt="頭像"></section>
+                        -->
+                    </section>
                 </section>
             </section>
         </main>
@@ -319,7 +345,7 @@
             <section class="commodityGroup">
                 <section class="commodity">
                     <section class="graphics">
-                        <section class="love"><i class="fas fa-heart"></i> <span>75</span></section>
+                        <section class="love"><i class="bi bi-heart"></i> <span>75</span></section>
                         <section class="img"><img src="https://fakeimg.pl/300x250/394897/fff" alt="拍攝商品圖"></section>
                     </section>
                     <section class="bid">
@@ -338,7 +364,7 @@
                 </section>
                 <section class="commodity">
                     <section class="graphics">
-                        <section class="love"><i class="fas fa-heart"></i> <span>75</span></section>
+                        <section class="love"><i class="bi bi-heart"></i> <span>75</span></section>
                         <section class="img"><img src="https://fakeimg.pl/300x250/394897/fff" alt="拍攝商品圖"></section>
                     </section>
                     <section class="bid">
