--- a/html/about.html
+++ b/html/about.html
@@ -40,35 +40,35 @@
                     </a>
                 </div>
                 <div class="introduceCard">
-                    <a href="" class="btn" id="rule">
+                    <a href="#" class="btn" id="rule">
                         <h2>02</h2>
                         <h3>交易規範</h3>
                         <p>more</p>
                     </a>
                 </div>
-                <div class="introduceCard">
-                    <a href="" class="btn">
+                <div class="introduceCard" id="buyer">
+                    <a href="#" class="btn">
                         <h2>03</h2>
                         <h3>買家條款</h3>
                         <p>more</p>
                     </a>
                 </div>
-                <div class="introduceCard">
-                    <a href="" class="btn">
+                <div class="introduceCard" id="seller">
+                    <a href="#" class="btn">
                         <h2>04</h2>
                         <h3>賣家條款</h3>
                         <p>more</p>
                     </a>
                 </div>
-                <div class="introduceCard">
-                    <a href="" class="btn">
+                <div class="introduceCard" id="contact">
+                    <a href="#" class="btn">
                         <h2>05</h2>
                         <h3>聯絡我們</h3>
                         <p>more</p>
                     </a>
                 </div>
-                <div class="introduceCard">
-                    <a href="" class="btn">
+                <div class="introduceCard" id="cooperate">
+                    <a href="#" class="btn">
                         <h2>06</h2>
                         <h3>合作品牌</h3>
                         <p>more</p>
@@ -82,21 +82,21 @@
         <section class="size introduceCardWrap introduceCardWrapPC">
             <div class="raw">
                 <div class="introduceCard">
-                    <a href="" class="btn">
+                    <a href="#" class="btn">
                         <h2>01</h2>
                         <h3>關於我們</h3>
                         <p>more</p>
                     </a>
                 </div>
                 <div class="introduceCard">
-                    <a href="" class="btn">
+                    <a href="#" class="btn">
                         <h2>02</h2>
                         <h3>交易規範</h3>
                         <p>more</p>
                     </a>
                 </div>
                 <div class="introduceCard">
-                    <a href="" class="btn">
+                    <a href="#" class="btn">
                         <h2>03</h2>
                         <h3>買家條款</h3>
                         <p>more</p>
@@ -109,21 +109,21 @@
         <section class="size introduceCardWrap introduceCardWrapPC">
             <div class="raw">
                 <div class="introduceCard">
-                    <a href="" class="btn">
+                    <a href="#" class="btn">
                         <h2>04</h2> 
                         <h3>賣家條款</h3>
                         <p>more</p>
                     </a>
                 </div>
                 <div class="introduceCard">
-                    <a href="" class="btn">
+                    <a href="#" class="btn">
                         <h2>05</h2>
                         <h3>聯絡我們</h3>
                         <p>more</p>
                     </a>
                 </div>
                 <div class="introduceCard">
-                    <a href="" class="btn">
+                    <a href="#" class="btn">
                         <h2>06</h2>
                         <h3>合作品牌</h3>
                         <p>more</p>
@@ -132,20 +132,9 @@
             </div>
             <div class="bookshelf"></div>
         </section>
-        <div class="aa displayNone" id="aboutMeCard">
-            1111111
-        </div>
-        <div class="b">
-            2
-        </div>
-        <div class="c">
-            3
-        </div>
-        <div class="d">
-            4
-        </div>
+
         <!-- 伶_關於我們_報紙區_PC端 -->
-        <section class="size flipBookWrap aboutUsWrap">
+        <section class="size flipBookWrap aboutUsWrap displayNone" id="aboutMeBook">
             <div class="pages" id="pages">
                 <div class="page pageCover"></div>
                 <div class="page">
@@ -169,7 +158,7 @@
                 <div class="page pageCover"></div>
             </div>
         </section>
-        <section class="size flipBookWrap aboutUsWrap">
+        <section class="size flipBookWrap aboutUsWrap displayNone" id="ruleBook">
             <div class="pages" id="pages">
                 <div class="page pageCover"></div>
                 <div class="page">
@@ -214,7 +203,7 @@
                 <div class="page pageCover"></div>
             </div>
         </section>
-        <section class="size flipBookWrap aboutUsWrap">
+        <section class="size flipBookWrap aboutUsWrap displayNone" id="buyerBook">
             <div class="pages" id="pages">
                 <div class="page pageCover"></div>
                 <div class="page">
@@ -239,7 +228,7 @@
                 <div class="page pageCover"></div>
             </div>
         </section>
-        <section class="size flipBookWrap aboutUsWrap">
+        <section class="size flipBookWrap aboutUsWrap displayNone" id="sellerBook">
             <div class="pages" id="pages">
                 <div class="page pageCover"></div>
                 <div class="page">
@@ -264,7 +253,7 @@
                 <div class="page pageCover"></div>
             </div>
         </section>
-        <section class="size flipBookWrap aboutUsWrap">
+        <section class="size flipBookWrap aboutUsWrap displayNone" id="contactBook">
             <div class="pages" id="pages">
                 <div class="page pageCover"></div>
                 <div class="page">
@@ -291,7 +280,7 @@
                 <div class="page pageCover"></div>
             </div>
         </section>
-        <section class="size flipBookWrap aboutUsWrap">
+        <section class="size flipBookWrap aboutUsWrap displayNone" id="cooperateBook">
             <div class="pages" id="pages">
                 <div class="page pageCover"></div>
                 <div class="page">
