--- a/html/galleryDoor.html
+++ b/html/galleryDoor.html
@@ -27,7 +27,7 @@
                         <a href="galleryAll\gallery\gallery.html">
                             <div class="wrap">
                                 <div class="pic">
-                                    <img src="../assets/image/galleryDoor_door04.gif" alt="gelleryDoorImage">
+                                    <img src="assets/image/galleryDoor_door04.gif" alt="gelleryDoorImage">
                                 </div>
                                 <div class="text">
                                     <p>公仔類</p>
@@ -40,7 +40,7 @@
                         <a href="galleryAll\gallery\gallery.html">
                             <div class="wrap">
                                 <div class="pic">
-                                    <img src="../assets/image/galleryDoor_door05.gif" alt="gelleryDoorImage">
+                                    <img src="assets/image/galleryDoor_door05.gif" alt="gelleryDoorImage">
                                 </div>
                                 <div class="text">
                                     <p>品牌合作</p>
@@ -53,7 +53,7 @@
                         <a href="galleryAll\gallery\gallery.html">
                             <div class="wrap">
                                 <div class="pic">
-                                    <img src="../assets/image/galleryDoor_door01.gif" alt="gelleryDoorImage">
+                                    <img src="assets/image/galleryDoor_door01.gif" alt="gelleryDoorImage">
                                 </div>
                                 <div class="text">
                                     <p>展示區</p>
@@ -66,7 +66,7 @@
                         <a href="galleryAll\gallery\gallery.html">
                             <div class="wrap">
                                 <div class="pic">
-                                    <img src="../assets/image/galleryDoor_door02.gif" alt="gelleryDoorImage">
+                                    <img src="assets/image/galleryDoor_door02.gif" alt="gelleryDoorImage">
                                 </div>
                                 <div class="text">
                                     <p>雕塑類</p>
@@ -79,7 +79,7 @@
                         <a href="galleryAll\gallery\gallery.html">
                             <div class="wrap">
                                 <div class="pic">
-                                    <img src="../assets/image/galleryDoor_door03.gif" alt="gelleryDoorImage">
+                                    <img src="assets/image/galleryDoor_door03.gif" alt="gelleryDoorImage">
                                 </div>
                                 <div class="text">
                                     <p>畫作類</p>
