--- a/html/about.html
+++ b/html/about.html
@@ -49,26 +49,26 @@
                 <div class="introduceCard" id="buyer">
                     <a href="#" class="btn">
                         <h2>03</h2>
-                        <h3>買家流程</h3>
+                        <h3>買家條款</h3>
                         <p>more</p>
                     </a>
                 </div>
-                <div class="introduceCard" id="seller">
-                    <a href="#" class="btn">
+                <div class="introduceCard">
+                    <a href="#" class="btn" id="seller">
                         <h2>04</h2>
-                        <h3>賣家流程</h3>
+                        <h3>賣家條款</h3>
                         <p>more</p>
                     </a>
                 </div>
-                <div class="introduceCard" id="contact">
-                    <a href="#" class="btn">
+                <div class="introduceCard">
+                    <a href="#" class="btn" id="contact">
                         <h2>05</h2>
                         <h3>聯絡我們</h3>
                         <p>more</p>
                     </a>
                 </div>
-                <div class="introduceCard" id="cooperate">
-                    <a href="#" class="btn">
+                <div class="introduceCard">
+                    <a href="#" class="btn" id="cooperate">
                         <h2>06</h2>
                         <h3>合作品牌</h3>
                         <p>more</p>
@@ -98,7 +98,7 @@
                 <div class="introduceCard">
                     <a href="#" class="btn">
                         <h2>03</h2>
-                        <h3>買家流程</h3>
+                        <h3>買家條款</h3>
                         <p>more</p>
                     </a>
                 </div>
