1.首頁底圖抽換 2.index背景圖修正

--- a/html/homePage.html
+++ b/html/homePage.html
@@ -97,7 +97,7 @@
                     <img src="assets/image/home_homeCatalog_lavbag.png"  alt="">
                 </div> -->
                 <div class="pic">
-                    <img src="assets/image/home_homeMember_room.png" alt="">
+                    <img src="assets/image/3dSurroundView.jpg" alt="">
                 </div>
                 <div class="txt">
                     <h2 class="epBColor">會員中心</h2>
