--- a/html/homePage.html
+++ b/html/homePage.html
@@ -8,6 +8,9 @@
     <!-- 頁籤icon -->
     <link rel="icon" href="assets/icon/a_icon.ico" type="art together icon">
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+    <script src="js/vue/vue.min.js"></script>
+    <script src="js/supportPage.js"></script>
 </head>
 <body> 
     @@include('layout/headerNormal.html')
@@ -144,8 +147,9 @@
             </section>
         </section>
     </section>
-    @@include('layout/footer.html')
     @@include('layout/supportPage.html')
+    @@include('layout/footer.html')
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
     <script src="js/homePage.js"></script>
