--- a/html/homePage.html
+++ b/html/homePage.html
@@ -9,7 +9,8 @@
     <link rel="icon" href="assets/icon/a_icon.ico" type="art together icon">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body> 
+<body>
+    <!-- <span class="cursor"></span> -->
     @@include('layout/headerNormal.html')
     <section class="homeWrap">
         <section class="homeIntro">
