--- a/html/3dSurroundView.html
+++ b/html/3dSurroundView.html
@@ -24,7 +24,7 @@
     <!--按鈕通知-->
     <!-- <link rel="stylesheet" href="assets/css/notice.css"> -->
     <!-- 3D套件 --->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css" />
+    <link rel="stylesheet" href="assets/3dCss/pannellum.css" />
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
 
     <title>會員中心</title>
@@ -92,21 +92,21 @@
         </section>
         <main>
             <section>
-                <p class="information">會員編號：<span class="small">0123456（pk）</span></p>
-                <p class="information">會員暱稱：<span class="small showChangeValue" name="1">text</span> <input class="changeValue" value="text" nmae="1"></input>
+                <p class="information">會員編號：<span>0123456（pk）</span></p>
+                <p class="information">會員暱稱：<span class="showChangeValue" name="1">text</span> <input class="changeValue" value="text" nmae="1"></input>
                 </p>
                 <p class="information">會員帳號：<span>milktea</span></p>
                 <p class="information">會員密碼：<span>20190119</span></p>
                 </p>
-                <p class="information">姓名：<span class="small showChangeValue" name="2">text</span><input class="changeValue" value="text" nmae="2"></input>
+                <p class="information">姓名：<span class="showChangeValue" name="2">text</span><input class="changeValue" value="text" nmae="2"></input>
                 </p>
-                <p class="information">信箱：<span class="small showChangeValue" name="3">text</span><input class="changeValue" value="text" nmae="3"></input>
+                <p class="information">信箱：<span class="showChangeValue" name="3">text</span><input class="changeValue" value="text" nmae="3"></input>
                 </p>
-                <p class="information">電話：<span class="small showChangeValue" name="4">text</span><input class="changeValue" value="varchar" nmae="4"></input>
+                <p class="information">電話：<span class="showChangeValue" name="4">text</span><input class="changeValue" value="varchar" nmae="4"></input>
                 </p>
-                <p class="information">地址：<span class="small showChangeValue" name="5">text</span><input class="changeValue" value="text" nmae="5"></input>
+                <p class="information">地址：<span class="showChangeValue" name="5">text</span><input class="changeValue" value="text" nmae="5"></input>
                 </p>
-                <p class="information">信用卡：<span class="small showChangeValue" name="6">text</span><input class="changeValue" value="int" nmae="6"></input>
+                <p class="information">信用卡：<span class="showChangeValue" name="6">text</span><input class="changeValue" value="int" nmae="6"></input>
                 </p>
                 <p class="information">註冊日期：<span>20220224</span>
                 </p>
@@ -199,10 +199,10 @@
                     <section>
                         <p>訂單金額:$3000</p>
                     </section>
-                    <section class="buttonGroup">
+                    <!-- <section class="buttonGroup">
                         <button class="button epFBgColor" type="button">按鈕</button>
                         <button class="button epFBgColor" type="button">按鈕</button>
-                    </section>
+                    </section> -->
                 </section>
             </section>
             <section class="record">
@@ -227,10 +227,10 @@
                     <section>
                         <p>藝益黨帶復學</p>
                     </section>
-                    <section class="buttonGroup">
+                    <!-- <section class="buttonGroup">
                         <button class="button epFBgColor" type="button">按鈕</button>
                         <button class="button epFBgColor" type="button">按鈕</button>
-                    </section>
+                    </section> -->
                 </section>
             </section>
         </main>
