css 副檔名修正 客服JS修改

--- a/html/homePage.html
+++ b/html/homePage.html
@@ -8,7 +8,7 @@
     <!-- 頁籤icon -->
     <link rel="icon" href="assets/icon/a_icon.ico" type="art together icon">
     <link rel="stylesheet" href="assets/css/style.css">
-    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="js/vue/vue.min.js"></script>
     <script src="js/supportPage.js"></script>
 </head>
