--- a/html/listing.html
+++ b/html/listing.html
@@ -26,6 +26,14 @@
 			});
 		});
 	</script>
+    <!-- 方塊收起按鈕 -->
+    <script>
+        $(function () {
+            $(`#cubeBtn`).click(function(){
+                $('.cubeSide').slideToggle();
+            });
+        });
+    </script>
 </head>
 <body>
     @@include('layout/headerNormal.html')
@@ -34,7 +42,7 @@
     <section id="listingVue">
         <section class="safeFrame">
             <div class="listingSteps">
-                <h2 class="epBColor">上架競拍流程</h2>
+                <h2 class="epBColor">上架競拍</h2>
                 <h4>馬上開啟您的個人拍賣會</h4>
                 <!-- 收起按鈕 -->
                 <button id="slideButton" class="roundOutline"><h6>上架流程步驟 &nbsp;</h6><b class="arrow">▲</b></button>
@@ -53,7 +61,7 @@
                                 <img src="assets/image/listingImage/find_page_icon.png">
                                 <h6>步驟二: 找到競拍頁面</h6>
                             </div>
-                            <p>請到導覽列中按下"藝術品上架"，連結到賣家上架頁面。</p>
+                            <p>請到導覽列中按下"上架"，連結到賣家上架頁面。</p>
                         </div>
                         <div class="step aidBgColor">
                             <div class="stepTitle">
@@ -93,55 +101,70 @@
                 <h4 class="epBColor">藝廊效果廣告展示</h4>
             </div>
         </section>
-
+        
         <!-- 產品效果廣告展示 -->
         <section>
             <div class="owl-carousel owl-theme">
-                <div class="cube">
-                    <!-- <button id="cubeBtn" class="round">點我</button>     方塊收起按鈕 -->
-                    <div class="top"></div>
-                    <div>
-                        <span style="--i:0"></span>
-                        <span style="--i:1"></span>
-                        <span style="--i:2"></span>
-                        <span style="--i:3"></span>
+                <div class="banner">
+                    <img src="assets/image/listingImage/urban_art_banner.png" alt="none">
+                </div>
+                <div class="wrap">
+                    <div class="card">
+                        <div class="cover">
+                            <h1 id="first"><img src="assets/image/listingImage/listing_bg_picture1.png" alt="none"></h1>
+                        </div>
+                        <div class="back">
+                            <p>Beauty is everywhere.</p>
+                        </div>
                     </div>
-            </div>
-            <div class="cigarette">
-                <div class="cigaretteBody">
-                    <span style="--i:1"><i>Nooooo</i>Smoooooooking<i>|</i></span>
                 </div>
-                <div class="cigaretteBody">
-                    <span style="--i:2"><i>Nooooo</i>Smoooooooking<i>|</i></span>
+                <div>
+                    <!-- 方塊收起按鈕 -->
+                    <button id="cubeBtn" class="round">點我</button>
+                    <div class="cube">
+                        <div class="top"><img src="../assets/image/listingImage/mona_lisa_ps.png" alt="none"></div>
+                        <div>
+                            <span class="cubeSide"style="--i:0"><img src="../assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
+                            <span class="cubeSide"style="--i:1"><img src="../assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
+                            <span class="cubeSide"style="--i:2"><img src="../assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
+                            <span class="cubeSide"style="--i:3"><img src="../assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
+                        </div>
+                    </div>
                 </div>
-                <div class="cigaretteBody">
-                    <span style="--i:3"><i>Nooooo</i>Smoooooooking<i>|</i></span>
+                <div class="cigaretteBg">
+                    <div class="cigarette">
+                        <div class="cigaretteBody">
+                            <span style="--i:1"><i>Nooooo</i>Smoooooooking<i>|</i></span>
+                        </div>
+                        <div class="cigaretteBody">
+                            <span style="--i:2"><i>Nooooo</i>Smoooooooking<i>|</i></span>
+                        </div>
+                        <div class="cigaretteBody">
+                            <span style="--i:3"><i>Nooooo</i>Smoooooooking<i>|</i></span>
+                        </div>
+                        <div class="cigaretteBody">
+                            <span style="--i:4"><i>Nooooo</i>Smoooooooking<i>|</i></span>
+                        </div>
+                        <div class="cigaretteBody">
+                            <span style="--i:5"><i>Nooooo</i>Smoooooooking<i>|</i></span>
+                        </div>
+                        <div class="cigaretteBody">
+                            <span style="--i:6"><i>Nooooo</i>Smoooooooking<i>|</i></span>
+                        </div>
+                        <div class="cigaretteBody">
+                            <span style="--i:7"><i>Nooooo</i>Smoooooooking<i>|</i></span>
+                        </div>
+                        <div class="cigaretteBody">
+                            <span style="--i:8"><i>Nooooo</i>Smoooooooking<i>|</i></span>
+                        </div>
+                        <div class="cigaretteBody">
+                            <span style="--i:9"><i>Nooooo</i>Smoooooooking<i>|</i></span>
+                        </div>
+                        <div class="cigaretteBody">
+                            <span style="--i:10"><i>Nooooo</i>Smoooooooking<i>|</i></span>
+                        </div>
+                    </div>
                 </div>
-                <div class="cigaretteBody">
-                    <span style="--i:4"><i>Nooooo</i>Smoooooooking<i>|</i></span>
-                </div>
-                <div class="cigaretteBody">
-                    <span style="--i:5"><i>Nooooo</i>Smoooooooking<i>|</i></span>
-                </div>
-                <div class="cigaretteBody">
-                    <span style="--i:6"><i>Nooooo</i>Smoooooooking<i>|</i></span>
-                </div>
-                <div class="cigaretteBody">
-                    <span style="--i:7"><i>Nooooo</i>Smoooooooking<i>|</i></span>
-                </div>
-                <div class="cigaretteBody">
-                    <span style="--i:8"><i>Nooooo</i>Smoooooooking<i>|</i></span>
-                </div>
-                <div class="cigaretteBody">
-                    <span style="--i:9"><i>Nooooo</i>Smoooooooking<i>|</i></span>
-                </div>
-                <div class="cigaretteBody">
-                    <span style="--i:10"><i>Nooooo</i>Smoooooooking<i>|</i></span>
-                </div>
-            </div>
-            <div class="banner">
-                <img src="assets/image/listingImage/urban_art_banner.png" alt="none">
-            </div>
             </div>
         </section>
         <script src="js/carousel.js"></script>
@@ -178,7 +201,7 @@
                             <input type="text" class="textBox" id="artistName" name="artistName" value="" v-model="message1" placeholder="請輸入" required>
                         </label>
                     </div>
-                    <div class="bidTime">
+                    <!-- <div class="bidTime">
                         <label for="">
                             <h6>競標時間:</h6>
                             <select name="time" class="aidBgColor" v-model="time" required>
@@ -192,14 +215,14 @@
                                 <option value="29d 23h 59m 59s">30天</option>
                             </select>
                         </label>
-                    </div>
+                    </div> -->
                 <div class="startPrice">
                     <label for="">
                         <h6>起標價:</h6>
                     </label>
                     <input type="text" class="textBox" id="" name="starPrice" value="" v-model="score" placeholder="請輸入" required>
                 </div>
-                <div class="bidPitch">
+                <!-- <div class="bidPitch">
                     <label for="">
                         <h6>每次標價間距:</h6>
                         <select name="bidPitch" class="aidBgColor" v-model="pitch" required>
@@ -216,7 +239,7 @@
                             <option value="100,000">NT 100,000</option>
                         </select>
                     </label>
-                </div>
+                </div> -->
                 <div class="price">
                     <label for="">
                         <h6>定價:</h6>
