listing layout update

--- a/html/listing.html
+++ b/html/listing.html
@@ -201,7 +201,7 @@
                             <input type="text" class="textBox" id="artistName" name="artistName" value="" v-model="message1" placeholder="請輸入" required>
                         </label>
                     </div>
-                    <!-- <div class="bidTime">
+                    <div class="bidTime">
                         <label for="">
                             <h6>競標時間:</h6>
                             <select name="time" class="aidBgColor" v-model="time" required>
@@ -215,14 +215,14 @@
                                 <option value="29d 23h 59m 59s">30天</option>
                             </select>
                         </label>
-                    </div> -->
+                    </div>
                 <div class="startPrice">
                     <label for="">
                         <h6>起標價:</h6>
                     </label>
                     <input type="text" class="textBox" id="" name="starPrice" value="" v-model="score" placeholder="請輸入" required>
                 </div>
-                <!-- <div class="bidPitch">
+                <div class="bidPitch">
                     <label for="">
                         <h6>每次標價間距:</h6>
                         <select name="bidPitch" class="aidBgColor" v-model="pitch" required>
@@ -239,7 +239,7 @@
                             <option value="100,000">NT 100,000</option>
                         </select>
                     </label>
-                </div> -->
+                </div>
                 <div class="price">
                     <label for="">
                         <h6>定價:</h6>
