--- a/html/listing.html
+++ b/html/listing.html
@@ -12,7 +12,7 @@
 	<script src="js/jquery/jquery-ui.js"></script>
     <script src="js/vue/vue.js"></script>
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>listing</title>
+    <title>商品上架</title>
     <!-- 頁籤icon -->
     <link rel="icon" href="assets/icon/a_icon.ico" type="art together icon">
 
