--- a/galleryAll/gallery/gallery.html
+++ b/galleryAll/gallery/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day 06 - OrbitControls、stats.js</title>
+    <title>藝廊</title>
     <title>gallery</title>
     <link rel="icon" href="../../assets/icon/a_icon.ico" type="art together icon">
     <link rel="stylesheet" href="./index.css" />
