--- a/html/homePage.html
+++ b/html/homePage.html
@@ -88,7 +88,7 @@
                     <img src="assets/image/home_homeCatalog_lavbag.png"  alt="">
                 </div> -->
                 <div class="pic">
-                    <img src="assets/image/home_homGallery_gallery.jpeg" alt="">
+                    <img src="assets/image/home_homGallery_gallery.png" alt="">
                 </div>
                 <div class="txt">
                     <h2 class="epBColor">藝起逛逛</h2>
