--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CFD104-G2-Art together</title>
+    <title>藝起前後</title>
     <!-- css -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
