listing radio update appearance none delete

--- a/html/listing.html
+++ b/html/listing.html
@@ -250,26 +250,26 @@
                     <h5>產品種類:</h5>
                     <div class="allType">
                         <div class="type">
-                            <label>
-                                <input type="radio" name="type" required>
+                            <input type="radio" id="type1" name="type" required>
+                            <label for="type1">
                                 畫作類
                             </label>
                         </div>
-                        <div class="type">
-                            <label>
-                                <input type="radio" name="type">
+                        <div for="" class="type">
+                            <input type="radio" id="type2" name="type">
+                            <label for="type2">
                                 雕塑類
                             </label>
                         </div>
                         <div class="type">
-                            <label>
-                                <input type="radio" name="type">
+                            <input type="radio" type="type3" name="type">
+                            <label for="type3">
                                 公仔類
                             </label>
                         </div>
                         <div class="type">
-                            <label>
-                                <input type="radio" name="type">
+                            <input type="radio" id="type4" name="type">
+                            <label for="type4">
                                 品牌合作類
                             </label>
                         </div>
@@ -282,12 +282,12 @@
                             <p>藝廊廣告將展示於線上藝廊中，隨機以不同的動態效果呈現您的藝術品。<br>(如右方)達到與客戶端互動賞玩的作用。購買前還請謹慎決定，切勿造成工作人員負擔，謝謝。</p>
                         </div>
                     </div>
-                    <label>
-                        <input type="radio" name="ad" required>
+                    <input type="radio" id="ad1" name="ad" required>
+                    <label for="ad1">
                         購買廣告
                     </label>
-                    <label>
-                        <input type="radio" name="ad">
+                    <input type="radio" id="ad2" name="ad">
+                    <label for="ad2">
                         暫無需求
                     </label>
                 </div>
