修改帳號管理樣式

--- a/html/3dSurroundView.html
+++ b/html/3dSurroundView.html
@@ -91,7 +91,7 @@
             <span class="close3D"><i class="fas fa-times"></i></span>
         </section>
         <main>
-            <section>
+            <section class="accountManagement_information">
                 <p class="information">會員編號：<span>0123456（pk）</span></p>
                 <p class="information">會員暱稱：<span class="showChangeValue" name="1">text</span> <input class="changeValue" value="text" nmae="1"></input>
                 </p>
@@ -208,24 +208,28 @@
             <section class="record">
                 <section class="recordTitle">
                     <p>
-                        <span>標題</span>
-                        <span>副標題</span>
+                        <span>訂單編號:0123456790</span>
+                        <span>訂購日期:20220302</span>
                     </p>
                 </section>
                 <section class="recordGraphics">
                     <section class="recordGraphicsGraphics">
                         <section class="img"><img src="https://fakeimg.pl/100/394897/fff" alt="商品圖"></section>
-                        <section>
-                            <p>商品名稱</p>
+                        <section class="recordGraphicsOrderlist">
+                            <p>奶茶弟弟的黃金骨頭</p>
+                            <p>數量 : 1</p>
+                            <p>訂單狀態 : 未付款</p>
+                            <p>物流配送狀態 : 未配送</p>
+                            <!-- <p>$3000</p> -->
                         </section>
                     </section>
                     <!-- <section class="recordGraphicsText">
-                        <p>recordGraphicsText</p>
+                        <p>$3000</p>
                     </section> -->
                 </section>
                 <section class="recordFooter">
                     <section>
-                        <p>藝益黨帶復學</p>
+                        <p>訂單金額:$30,000</p>
                     </section>
                     <!-- <section class="buttonGroup">
                         <button class="button epFBgColor" type="button">按鈕</button>
